--- a/vrst/Orders/index.html
+++ b/vrst/Orders/index.html
@@ -21,6 +21,7 @@
             <div class="munu_item"><a href="#">Comps IP</a></div>
         </div>
         <div class="pole">
+            <a href="#" class="add_order">+ add_order</a>
             <div class="order">
                 <div class="order_body">
                     <div class="order_menu">
