--- a/vrst/Orders/index.html
+++ b/vrst/Orders/index.html
@@ -24,6 +24,7 @@
             <div class='preorder'><a href="#" class="add_order">+ add_order</a></div>
             
             <div class="order">
+                <a href="#" class="order_link"></a>
                 <div class="order_body">
                     <div class="order_menu">
                         <div class="number">number</div>
@@ -40,6 +41,7 @@
                 </div>
             </div>
             <div class="order">
+                <a href="#" class="order_link"></a>
                 <div class="order_body">
                     <div class="order_menu">
                         <div class="number">number</div>
